k8s/api-login-ad-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-login-ad
  namespace: api-login-ad
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-login-ad
    spec:
      containers:
      - name: api-login-ad
        image: harbor.claro.com.br/infra/api-ad-login:v0.3
        livenessProbe:
          httpGet:
            path: /status
            port: 4000
          initialDelaySeconds: 3
          periodSeconds: 10
      imagePullSecrets:
      - name: api-login-ad
