k8s/api-login-ad-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-login-ad
  namespace: api-login-ad
spec:
  selector:
    app: api-login-ad
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
